# fantasybaby_music_stuff

./: .gitignore  README.md  pyproject.toml
doc/: project-structure.md
scripts/: start-ui.ps1
skill/: optimization-summary.md
src/music_stuff/: __init__.py  audio.py  cli.py  constants.py  harmony.py  melody.py  models.py  pipeline.py  rhythm.py  score.py  source.py  web.py
src/music_stuff/templates/: index.html
tests/: test_audio.py  test_cli.py  test_jianpu.py  test_melody.py  test_models.py  test_pipeline.py  test_rhythm.py  test_source.py  test_web.py
