[project]
name = "music-stuff"
version = "0.1.0"
description = "Audio-to-score experiments for melody, key, and chord extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
music-stuff = "music_stuff.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_stuff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
